# coding-the-matrix

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
coding_the_matrix/: GF2.py  Mat.py  Vec.py  __init__.py  _image_mat_util.py  bitutil.py  hamming.py  image.py  image_mat_util.py  matutil.py  plot.py  png.py  solve.py  solver.py  transform.py  vecutil.py
notebooks/: 0.1_intro.ipynb  0.2_vectors.ipynb  0.3_linear_combination.ipynb  0.4_matrix.ipynb  0.51_stash.ipynb  0.5_ss_basis-Copy1.ipynb  0.5_ss_basis.ipynb  GF2.py  mat.py  vec.py
notebooks/.ipynb_checkpoints/: 0.1_intro-checkpoint.ipynb  0.2_vectors-checkpoint.ipynb
tests/: test_coding_the_matrix.py  test_image_mat_util.py  test_mat.py  test_matutil.py  test_solve.py  test_vecutil.py
