[tool.poetry]
name = "coding-the-matrix"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota.shimizu@quantumblack.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0"
black = "*"
tqdm = "*"
seaborn = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
