[tool.poetry]
name = "coding-the-matrix"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota.shimizu@quantumblack.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
jupyterlab = "*"
black = "*"
tqdm = "*"
seaborn = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
blackcellmagic = "*"
jedi = "<=0.17.2"
# jupyter-kite = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
