[tool.poetry]
name = "coding-the-matrix"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota.shimizu@quantumblack.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
jupyterlab = "^3.0"
tqdm = "*"
seaborn = "*"
pandas = "*"
numpy = "==1.18.1"
matplotlib = "*"
blackcellmagic = "*"
jedi = "<=0.17.2"
jupyter-kite = "*"
Pillow = '*'

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
